src/snapshots/len__ast__tests__app_multiple.snap
---
source: src/ast.rs
expression: p.parse(input.1)
---
ParseResult {
    output: Some(
        FunctionCall(
            FunctionCall {
                function: Identifier(
                    Identifier {
                        name: "foo",
                    },
                ),
                argument: FunctionCall(
                    FunctionCall {
                        function: Identifier(
                            Identifier {
                                name: "foo",
                            },
                        ),
                        argument: FunctionCall(
                            FunctionCall {
                                function: Identifier(
                                    Identifier {
                                        name: "foo",
                                    },
                                ),
                                argument: Identifier(
                                    Identifier {
                                        name: "foo",
                                    },
                                ),
                            },
                        ),
                    },
                ),
            },
        ),
    ),
    errs: [],
}
