src/snapshots/len__ast__tests__grouping_app_alt.snap
---
source: src/ast.rs
expression: p.parse(input.1)
---
ParseResult {
    output: Some(
        FunctionCall(
            FunctionCall {
                function: FunctionCall(
                    FunctionCall {
                        function: Identifier(
                            Identifier {
                                name: "foo",
                            },
                        ),
                        argument: Identifier(
                            Identifier {
                                name: "bar",
                            },
                        ),
                    },
                ),
                argument: Identifier(
                    Identifier {
                        name: "baz",
                    },
                ),
            },
        ),
    ),
    errs: [],
}
