src/snapshots/len__ast__tests__ident.snap
---
source: src/ast.rs
expression: p.parse(input.1)
---
ParseResult {
    output: Some(
        Identifier(
            Identifier {
                name: "foo",
            },
        ),
    ),
    errs: [],
}
