src/snapshots/len__ast__tests__int.snap
---
source: src/ast.rs
expression: p.parse(input.1)
---
ParseResult {
    output: Some(
        Literal(
            Integer(
                1,
            ),
        ),
    ),
    errs: [],
}
