src/snapshots/len__ast__tests__struct_simple.snap
---
source: src/ast.rs
expression: p.parse(input.1)
---
ParseResult {
    output: Some(
        Product(
            {
                "a": Identifier(
                    Identifier {
                        name: "b",
                    },
                ),
            },
        ),
    ),
    errs: [],
}
